tests/fixtures/validate/strict/invalid/strict-invalid-missing-end-1.yini
^ App
title = "My App"
enabled = true

// ERROR: missing /END terminator
